--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,4 @@ repos:
     rev: '5.0.4'
     hooks:
     -   id: flake8
-        args: [--max-line-length=88]
+        args: [--max-line-length=88, "--ignore=E741,W503"]
