--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,4 @@ repos:
     rev: '5.0.4'
     hooks:
     -   id: flake8
-        args: [--max-line-length=88, "--ignore=E741,W503", "--per-file-ignores=*/__init__.py:F401"]
+        args: [--max-line-length=88, "--ignore=E741,W503,E203", "--per-file-ignores=*/__init__.py:F401"]
