[ref #25] Add system rating calc

--- a/tests/glue_code/test_modeling_options.yaml
+++ b/tests/glue_code/test_modeling_options.yaml
@@ -13,5 +13,6 @@ electrolyzer:
         n_cells: 100
         stack_rating_kW: 500
     control:
+        system_rating_MW: 2
         n_stacks: 7
         control_type: BaselineDeg # default
