Add system rating optimization toolset (#35)
* [ref #25] Add adjustment function for stack rating

* [ref #25] Update to use scipy.optimize for `cell_area` calc

* [ref #25] Add system rating calc

* [ref #25] Add system sizing example

* [ref #25] Add optimize param to `run_electrolyzer`

* Fix inefficient DataFrame build

* [ref #25] Improve n_cells algorithm; improve example notebook

* [ref #25] Fix Stack init error in optimization

* Add current density to outputs

* [ref #25] Fix `optimize` bug in `run_electrolyzer`

Fixes a bug that I introduced by having `calc_rated_system` return a new dictionary instead of modifying the input dictionary in-place.

Also improves the optimization example notebook.

--- a/examples/example_03_optimization/modeling_options.yaml
+++ b/examples/example_03_optimization/modeling_options.yaml
@@ -2,8 +2,6 @@ general:
     verbose: False # default
 
 electrolyzer:
-    name: elec_model
-    description: electrolyzer model
     dt: 1 # default
 
     stack:
@@ -13,6 +11,5 @@ electrolyzer:
         n_cells: 100
         stack_rating_kW: 500
     control:
-        system_rating_MW: 2
-        n_stacks: 7
-        control_type: BaselineDeg # default
+        system_rating_MW: 2.0
+        control_type: BaselineDeg
