--- a/examples/example_04_controller/modeling_options.yaml
+++ b/examples/example_04_controller/modeling_options.yaml
@@ -12,7 +12,7 @@ electrolyzer:
     include_degradation_penalty: True
   control:
     n_stacks: 5
-    control_type: Decision_ctrl
+    control_type: DecisionControl
     policy:
       eager_on: False
       eager_off: False
