--- a/examples/example_06_alkaline/default_alkaline.yaml
+++ b/examples/example_06_alkaline/default_alkaline.yaml
@@ -3,32 +3,73 @@ general:
 
 electrolyzer:
     dt: 1 # default
-    model: default_hri
+
+    supervisor:
+        sysetm_rating_MW: .005
+        n_stacks: 1
+
     stack:
-        #cell_area:
-        max_current_dens: 0.3 #[A/cm^2]
-        temperature:  60 #[degC] - needed for cell calcs
-        pressure_operating:  1 #[bar] - needed as cell input
+        cell_type: alkaline
+        max_current: 90 # 0.3 [A/cm^2] * [300 cm^2]
+        temperature: 60 #[degC] - needed for cell calcs
         n_cells: 24 # - needed for cell calcs
-        stack_rating_kW:  5 #[kW]
-        min_power_percent: 0.25 #[% of rated] - opt
-    electrode:
+        stack_rating_kW: 5 # [kW]
+
+    degradation:
+        ALK_params:
+            rate_steady: 5.092592592592592e-09
+            rate_fatigue: 1.2820512820512823e-05
+            rate_onoff: 3.0726072607260716e-04
+
+    cell_params:
+        cell_type: alkaline
+        ALK_params:
+            model: default_hri
+            pressure_operating: 1 #[bar] - needed as cell input
+            turndown_ratio: 0.25 # [fraction of rated]
+            max_current_density: 0.3 #[A/cm^2]
+            electrode:
+                A_electrode: 300 #[cm^2] electrode total area
+                e_a: 0.2 #[cm] anode thickness
+                e_c: 0.2 #[cm] cathode thickness
+                d_am: 0.125 #[cm] anode-membrane distance
+                d_cm: 0.125 #[cm] cathode-membrane distance
+                d_ac: 0.25 #[cm] anode-cathode distance
+            electrolyte:
+                w_koh: 30 # [wt. %] can range from [25-33]
+            membrane:
+                A_membrane: 300 #[cm^2] #membrane surface area
+                e_m:  0.05 #[cm] #membrane thickness
+
+
+# in original modeling schema format
+
+    # model: default_hri
+    # stack:
+        #cell_area:
+        # max_current_dens: 0.3 #[A/cm^2]
+        # temperature:  60 #[degC] - needed for cell calcs
+        # pressure_operating:  1 #[bar] - needed as cell input
+        # n_cells: 24 # - needed for cell calcs
+        # stack_rating_kW:  5 #[kW]
+        # min_power_percent: 0.25 #[% of rated] - opt
+    # electrode:
         # anode_material: Nickle
         # cathode_material: Nickle
-        A_electrode: 300 #[cm^2] electrode total area
-        e_a: 0.2 #[cm] anode thickness
-        e_c: 0.2 #[cm] cathode thickness
-        d_am: 0.125 #[cm] anode-membrane distance
-        d_cm: 0.125 #[cm] cathode-membrane distance
-        d_ac: 0.25 #[cm] anode-cathode distance
+        # A_electrode: 300 #[cm^2] electrode total area
+        # e_a: 0.2 #[cm] anode thickness
+        # e_c: 0.2 #[cm] cathode thickness
+        # d_am: 0.125 #[cm] anode-membrane distance
+        # d_cm: 0.125 #[cm] cathode-membrane distance
+        # d_ac: 0.25 #[cm] anode-cathode distance
         #electrode_effective_area: #cm^2 - opt?
-    electrolyte:
+    # electrolyte:
         # solution: KOH
-        w_koh: 30 # [wt. %] can range from [25-33]
-    membrane:
+        # w_koh: 30 # [wt. %] can range from [25-33]
+    # membrane:
         # material: Zirfon
-        A_membrane: 300 #[cm^2] #membrane surface area
-        e_m:  0.05 #[cm] #membrane thickness
+        # A_membrane: 300 #[cm^2] #membrane surface area
+        # e_m:  0.05 #[cm] #membrane thickness
         # density: 2.02 #g/cm^3
         # porosity: 56 #[%]
         # tortuosity: 2
