controller example debugging

--- a/examples/example_04_lcoh/cost_modeling_options.yaml
+++ b/examples/example_04_lcoh/cost_modeling_options.yaml
@@ -9,7 +9,7 @@ electrolyzer:
         n_stacks: 7
 
     controller:
-        control_type: BaselineDeg # defaul
+        control_type: BaselineDeg # default
 
     stack:
 
